[project]
name = "project-based-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "markupsafe==3.0.2",
    "numpy==2.2.2",
    "openai>=2.6.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "reportlab>=4.4.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2025.2",
    "werkzeug==3.1.3",
]
